fix merge issues and tweak translations

--- a/WebUI/src/assets/i18n/de.json
+++ b/WebUI/src/assets/i18n/de.json
@@ -5,8 +5,8 @@
   "COM_CLOSE": "Schließen",
   "COM_ADD": "Hinzufügen",
   "COM_RESTORE": "Defaults wiederherstellen",
-  "COM_SD_PROMPT": "Eingabeaufforderung für Bildgenerierung",
-  "COM_LLM_PROMPT": "Eingabeaufforderung für Antwortgenerierung",
+  "COM_SD_PROMPT": "Prompt für Bildgenerierung",
+  "COM_LLM_PROMPT": "Prompt für Antwortgenerierung",
   "COM_LLM_HF_PROMPT": "<Namespace>/<Repo-Name>",
   "COM_LLM_HF_PROMPT_GGUF": "<Namespace>/<Repo-Name>/<Dateipfad>",
   "COM_CLICK_UPLOAD": "- Klicken Sie zum Hochladen eines Bildes -",
@@ -44,7 +44,7 @@
   "COM_FULLSCREEN_EXIT": "Vollbild beenden",
   "COM_DO_NOT_SHOW_AGAIN": "Nicht wieder anzeigen",
   "COM_INSTALL": "Installieren",
-  "COM_INSTALL_ALL": "Installieren/Reparieren aller ausgewählten",
+  "COM_INSTALL_ALL": "Installieren/Reparieren der ausgewählten Backends",
   "COM_REPAIR": "Reparieren",
   "COM_CONTINUE": "Fortsetzen",
   "COM_GO_TO_SETUP": "Zum Backend-Manager gehen",
@@ -73,7 +73,7 @@
   "SETTINGS_MODEL_MANUAL_OPTIONS": "Manuelle Optionen",
   "SETTINGS_MODEL_NEGATIVE_PROMPT": "Negativer Prompt",
   "SETTINGS_MODEL_SEED": "Seed",
-  "SETTINGS_MODEL_GENERATE_NUMBER": "Bildanzahl generieren",
+  "SETTINGS_MODEL_GENERATE_NUMBER": "Bildanzahl",
   "SETTINGS_MODEL_LLM_MODEL": "Großes Sprachmodell",
   "SETTINGS_MODEL_IMAGE_PREVIEW": "Bildvorschau",
   "SETTINGS_MODEL_SAFE_CHECK": "Sicherheitsprüfung",
@@ -112,8 +112,8 @@
   "SETTINGS_MODEL_DOWNLOAD_DESC": "Unten finden Sie eine Liste von Modellen, die verschiedene KI-Aufgaben in AI-Playground ausführen können. Überprüfen Sie die Bedingungen jedes Modells, bevor Sie es herunterladen und verwenden. Alternativ können Sie andere Modellquellen auswählen, indem Sie die Modellpfade und -defaults oben ändern.",
   "TAB_CREATE": "Erstellen",
   "TAB_ENHANCE": "Verbessern",
-  "TAB_ANSWER": "Antwort",
-  "TAB_LEARN_MORE": "Mehr erfahren",
+  "TAB_ANSWER": "Antworten",
+  "TAB_LEARN_MORE": "Mehr Erfahren",
   "ENHANCE_INPUT_IMAGE_REQUIRED": "Bitte setzen Sie das Input-Bild vor der Generierung",
   "ENHANCE_UPSCALE": "Auflösung erhöhen",
   "ENHANCE_IMAGE_PROMPT": "Bild-Prompt",
@@ -127,11 +127,11 @@
   "ENHANCE_UPSCALE_VARIATION_DISABLE": "Subtil",
   "ENHANCE_UPSCALE_VARIATION_STRONG": "Stark",
   "ENHANCE_INPAINT_TYPE": "Typ",
-  "ENHANCE_INPAINT_FILL": "Mit etwas Neuem füllen",
-  "ENHANCE_INPAINT_FIX": "Reparieren und Korrigieren des maskierten Bereichs",
+  "ENHANCE_INPAINT_FILL": "Bereich mit neuem Inhalt füllen",
+  "ENHANCE_INPAINT_FIX": "Reparieren des maskierten Bereichs",
   "ENHANCE_INPAINT_MASK_REQUIRED": "Bitte zeichnen Sie die Inpaint-Maske vor der Generierung",
   "ENHANCE_INPAINT_USE_IMAGE_MODEL": "Aktuelles Bildmodell verwenden",
-  "ENHANCE_COM_DENOISE": "Rauschreduktionsfaktor",
+  "ENHANCE_COM_DENOISE": "Stärke",
   "ENHANCE_OUTPAINT_DIRECTION": "Richtung",
   "ENHANCE_PREVIEW_BEFORE_PROCESS": "Vor dem Prozess",
   "ENHANCE_PREVIEW_AFTER_PROCESS": "Nach dem Prozess",
@@ -142,10 +142,11 @@
   "ERROR_UNSUPPORTED_IMAGE_TYPE": "Nur PNG-, JPG-, GIF- und BMP-Bildformate werden unterstützt",
   "ANSWER_USER_NAME": "Sie",
   "ANSWER_AI_NAME": "Playground",
+  "ANSWER_NEW_CONVERSATION": "Neuer Chat",
   "ANSWER_ERROR_NOT_PROMPT": "Bitte geben Sie einen Prompt ein",
   "ANSWER_ERROR_CLEAR_SESSION": "Chat-Verlauf löschen",
-  "INCREASE_FONT_SIZE": "Schriftgröße vergrößern",
-  "DECREASE_FONT_SIZE": "Schriftgröße verringern",
+  "INCREASE_FONT_SIZE": "Schrift vergrößern",
+  "DECREASE_FONT_SIZE": "Schrift verkleinern",
   "ANSWER_RAG_ENABLE": "Datei-Abfrage aktivieren",
   "ANSWER_RAG_OPEN_DIALOG": "Datei-Uploader öffnen",
   "REQUEST_LLM_MODEL_NAME": "Fügen Sie ein Modell Ihrer Wahl von huggingface.co hinzu",
@@ -215,9 +216,9 @@
   "BACKEND_ACTION": "Aktion",
   "BACKEND_REQUIRED": "Erforderlich",
   "BACKEND_OPTIONAL": "Optional",
-  "BACKEND_REQUIRED_COMPONENTS_MESSAGE": "Bevor Sie die Intel AI-Playground verwenden können, müssen einige zusätzliche Komponenten herunterladen werden. Bitte stellen Sie sicher, dass Sie eine stabile und unlimitierte Internetverbindung haben.",
-  "BACKEND_OPTIONAL_COMPONENTS_MESSAGE": "Optionale Komponenten sind nicht erforderlich, um die AI-Playground zu verwenden, bieten aber erweiterte Funktionen. Wenn Sie sie verwenden möchten, klicken Sie bitte auf die Info-Schaltflächen, um sich mit den Nutzungsbedingungen vertraut zu machen, bevor Sie sie aktivieren.",
-  "BACKEND_TERMS_AND_CONDITIONS": "* Ich habe die optionale Komponente überprüft. Ich stimme allen Nutzungsbedingungen zu und möchte die Drittanbieter-Software herunterladen und aktivieren, falls sie anwendbar ist.",
+  "BACKEND_REQUIRED_COMPONENTS_MESSAGE": "Bevor Sie den Intel AI-Playground verwenden können, müssen einige zusätzliche Komponenten herunterladen werden. Bitte stellen Sie sicher, dass Sie eine stabile Internetverbindung mit unbegrenztem Datenvolumen haben.",
+  "BACKEND_OPTIONAL_COMPONENTS_MESSAGE": "Optionale Komponenten sind nicht erforderlich, um den AI-Playground zu verwenden, bieten aber erweiterte Funktionen. Wenn Sie sie verwenden möchten, klicken Sie bitte auf die Info-Schaltflächen, um sich mit den Nutzungsbedingungen vertraut zu machen, bevor Sie sie aktivieren.",
+  "BACKEND_TERMS_AND_CONDITIONS": "* Ich habe die optionale Komponente überprüft. Ich stimme allen Nutzungsbedingungen zu und möchte die Drittanbieter-Software herunterladen und aktivieren, falls zutreffend.",
   "BACKEND_STATUS_RUNNING": "Läuft",
   "BACKEND_STATUS_STOPPING": "Beendet",
   "BACKEND_STATUS_STARTING": "Startet",
@@ -239,7 +240,7 @@
   "WORKFLOW_RELOAD_INFO": "Workflows von der Festplatte laden.",
   "WORKFLOW_DOWNLOAD_INFO": "Neueste Workflows herunterladen und vorhandene Workflows sichern.",
   "WORKFLOW_HIGH_VRAM_INFO": "Dieses Modell erfordert viel VRAM. Reduzieren Sie bei Leistungsproblemen die Auflösung und/oder starten Sie das ComfyUI-Backend neu.",
-  "WORKFLOW_HIGH_VRAM_WARNING": "hohes VRAM erforderlich",
+  "WORKFLOW_HIGH_VRAM_WARNING": "Viel VRAM nötig",
   "LOADING_VERIFYING_BACKENDS": "Backends überprüfen",
   "LOADING_AI_PLAYGROUND_LOADING": "AI-Playground lädt"
 }
